exo mechs tweaks

--- a/server/plugins/Terraria/Data/items.yml
+++ b/server/plugins/Terraria/Data/items.yml
@@ -2992,7 +2992,7 @@ Drew之翼:
   lore:
   - §r[饰品]
   - §r防御损伤的数值改为防御力的一半与最终伤害之间的较大值
-  - §r损伤的防御受击后无修复冷却且会恢复等量生命值
+  - §r损伤的防御受击后无冷却快速修复且会恢复等量生命值
   - §r“哦天哪！那是接近的！”
   worth: 24000000
   rarity: 12
@@ -3001,7 +3001,7 @@ Drew之翼:
   lore:
   - §r[饰品]
   - §r防御损伤的数值改为防御力的一半与最终伤害之间的较大值
-  - §r损伤的防御受击后无修复冷却且会恢复等量生命值
+  - §r损伤的防御受击后无冷却快速修复且会恢复等量生命值
   - §r一次性受到至少100点伤害时短暂恢复最多为最终伤害95%的生命值
   - §r成功恢复的这部分生命值将被快速扣除
   - §r“竟然为了一滴血付出了这么多”
