supreme calamitas & exo mechs tweaks
finished supreme calamitas & exo mechs' difficulty balancing

--- a/server/plugins/Terraria/Data/items.yml
+++ b/server/plugins/Terraria/Data/items.yml
@@ -2991,7 +2991,7 @@ Drew之翼:
   item: LEASH
   lore:
   - §r[饰品]
-  - §r防御损伤的数值改为防御力的一半与最终伤害之间的较大值
+  - §r防御损伤的数值改为防御力与最终伤害之间较大值的35%
   - §r损伤的防御受击后无冷却快速修复且会恢复等量生命值
   - §r“哦天哪！那是接近的！”
   worth: 24000000
@@ -3000,7 +3000,7 @@ Drew之翼:
   item: LEASH
   lore:
   - §r[饰品]
-  - §r防御损伤的数值改为防御力的一半与最终伤害之间的较大值
+  - §r防御损伤的数值改为防御力与最终伤害之间较大值的35%
   - §r损伤的防御受击后无冷却快速修复且会恢复等量生命值
   - §r一次性受到至少100点伤害时短暂恢复最多为最终伤害95%的生命值
   - §r成功恢复的这部分生命值将被快速扣除
