--- a/server/plugins/Terraria/Data/optimization.yml
+++ b/server/plugins/Terraria/Data/optimization.yml
@@ -31,6 +31,7 @@ optimization:
   projVelUpdItvAcceleration: 5
   projVelUpdItvBossAcc: 3
   projVelUpdItvEveryTick: 1
+  projVelUpdItvEverySecondTick: 2
   projectileVelocityUpdateDistance: 96
   globalParticleDensity: 1.0
   dmgHologramInterval: 2
